Fikser flere sonarissues